// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Components: <Image /> With \`presentation\` as \`true\`. Create a snapshot. 1`] = `
<img
  alt=""
  height="auto"
  role="presentation"
  src="/path/to/image.png"
  srcSet="/path/to/image.png 2x"
  width="auto"
/>
`;

exports[`Components: <Image /> With \`presentation\` props as \`false\`. Create a snapshot. 1`] = `
<Fragment>
  <img
    alt=""
    aria-describedby="string"
    height="auto"
    src="/path/to/image.png"
    srcSet="/path/to/image.png 2x"
    width="auto"
  />
  <span
    id="string"
  >
    Lorem ipsum dolor sit amet consectetur adipisicing elit
  </span>
</Fragment>
`;
